samples/_failures_safe/1761330275_610bb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_578c4037.c: In function ‘print_stats’:
./samples/SAFE/__tmp_578c4037.c:150:55: error: expected ‘)’ at end of input
  150 |     printf("Errors: %d\n", analyzer->stats.error_count
      |           ~                                           ^
      |                                                       )
./samples/SAFE/__tmp_578c4037.c:150:5: error: expected declaration or statement at end of input
  150 |     printf("Errors: %d\n", analyzer->stats.error_count
      |     ^~~~~~
